# AnyDownloadManager

./: .gitignore  add.html  index.html  package.json  pnpm-lock.yaml  settings.html  vite.config.ts
src/: add-main.ts  bootstrap.ts  main.ts  settings-main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  payloads.rs  server.rs  state.rs  util.rs
src-tauri/src/commands/: core.rs  http.rs  manic.rs  mod.rs
src/components/: add.html  header.html  settings.html  sidebar.html  statusbar.html  table.html  toolbar.html
src/styles/: animations.css  base.css  components.css  index.css  layout.css  tokens.css
src/ui/: addWindow.ts  downloads.ts  i18n.ts  microinteractions.ts  settings.ts  settingsWindow.ts  windowControls.ts
